--- a/trading.html
+++ b/trading.html
@@ -17,18 +17,13 @@
 
             <label for="food">Food</label>
             <input type="number" id="food" />
-            <hr />
             <label for="wood">Wood</label>
             <input type="number" id="wood" />
-            <hr />
             <label for="gold">Gold</label>
             <input type="number" id="gold" />
-            <hr />
             <label for="Stone">Stone</label>
             <input type="number" id="stone" />
-            <hr />
-
-            <button >Submit</button>
+            <button id="submitBtn">Submit</button>
 
         </div>
 
