--- a/trading.html
+++ b/trading.html
@@ -15,13 +15,13 @@
         <div id="myAmounts">
             <h2>Input your resources</h2>
 
-            <label for="food">Food</label>
+            <label for="food" class="myItems">Food</label>
             <input type="number" id="food" />
-            <label for="wood">Wood</label>
+            <label for="wood" class="myItems">Wood</label>
             <input type="number" id="wood" />
-            <label for="gold">Gold</label>
+            <label for="gold" class="myItems">Gold</label>
             <input type="number" id="gold" />
-            <label for="Stone">Stone</label>
+            <label for="stone" class="myItems">Stone</label>
             <input type="number" id="stone" />
             <button id="submitBtn">Submit</button>
 
